// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Formatted Address should render 1`] = `
<div>
  <div
    class="w-64 inline-block undefined"
  >
    <div
      class="sc-AxjAm hQFgsK"
    >
      <div
        class="relative p-2"
      >
        <div
          class="absolute -right-2 -top-1 text-theme-neutral-400 hover:text-theme-neutral-500"
        >
          <div
            class="relative"
            data-testid="dropdown__toggle"
          >
            <div
              class="float-right outline-none focus:outline-none"
            >
              <div
                class="sc-AxirZ eEbZjj"
                height="20"
                width="20"
              >
                <svg>
                  settings.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="absolute right-3 -top-1"
        />
        <div>
          <div
            class="sc-AxiKw jQtkkF border-theme-primary-contrast -mr-2 undefined"
          />
          <div
            class="sc-AxiKw jQtkkF border-theme-primary-contrast"
          />
        </div>
        <div
          class="mt-6 truncate max-w-12"
        />
        <div
          class="font-bold text-theme-neutral-900"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Formatted Address should render blank 1`] = `
<div>
  <div
    class="w-64 inline-block undefined"
  >
    <div
      class="sc-AxjAm hQFgsK"
    >
      <div
        class="p-2"
      >
        <div>
          <div
            class="sc-AxiKw jQtkkF -mr-2 border-theme-primary-contrast bg-white"
          />
          <div
            class="sc-AxiKw jQtkkF border-theme-primary-contrast bg-white"
          />
        </div>
        <div
          class=" mt-6 text-md text-theme-primary-contrast undefined"
        >
          New wallet
        </div>
        <div
          class=" mt-1 text-md text-theme-primary-contrast undefined"
        >
          Balance
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Formatted Address should render with wallet data 1`] = `
<div>
  <div
    class="w-64 inline-block undefined"
  >
    <div
      class="sc-AxjAm hQFgsK"
    >
      <div
        class="relative p-2"
      >
        <div
          class="absolute -right-2 -top-1 text-theme-neutral-400 hover:text-theme-neutral-500"
        >
          <div
            class="relative"
            data-testid="dropdown__toggle"
          >
            <div
              class="float-right outline-none focus:outline-none"
            >
              <div
                class="sc-AxirZ eEbZjj"
                height="20"
                width="20"
              >
                <svg>
                  settings.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="absolute right-3 -top-1"
        />
        <div>
          <div
            class="sc-AxiKw jQtkkF border-theme-primary-contrast -mr-2 border-theme-warning-200"
          >
            <div
              class="sc-AxirZ eViLYR"
              height="16"
              width="18"
            >
              <svg>
                btc.svg
              </svg>
            </div>
          </div>
          <div
            class="sc-AxiKw bNqZRo border-theme-primary-contrast"
          />
        </div>
        <div
          class="mt-6 truncate max-w-12"
        >
          <div
            class="inline-block truncate"
          >
            <span
              class="text-theme-neutral-800 font-semibold max-w-24 flex-auto truncate mt-4 mr-1 text-base"
              data-testid="address__wallet-name"
            >
              My wallet
            </span>
            <span
              class="text-theme-neutral-400 font-semibold text-base"
              data-testid="address__wallet-address"
            >
              ASuu...3kqT
            </span>
          </div>
        </div>
        <div
          class="font-bold text-theme-neutral-900"
        >
          100,000 BTC
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Formatted Address should render with wallet data and optional icon 1`] = `
<div>
  <div
    class="w-64 inline-block undefined"
  >
    <div
      class="sc-AxjAm hQFgsK"
    >
      <div
        class="relative p-2"
      >
        <div
          class="absolute -right-2 -top-1 text-theme-neutral-400 hover:text-theme-neutral-500"
        >
          <div
            class="relative"
            data-testid="dropdown__toggle"
          >
            <div
              class="float-right outline-none focus:outline-none"
            >
              <div
                class="sc-AxirZ eEbZjj"
                height="20"
                width="20"
              >
                <svg>
                  settings.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="absolute right-3 -top-1"
        />
        <div>
          <div
            class="sc-AxiKw jQtkkF border-theme-primary-contrast -mr-2 border-theme-warning-200"
          >
            <div
              class="sc-AxirZ eViLYR"
              height="16"
              width="18"
            >
              <svg>
                btc.svg
              </svg>
            </div>
          </div>
          <div
            class="sc-AxiKw bNqZRo border-theme-primary-contrast"
          />
        </div>
        <div
          class="mt-6 truncate max-w-12"
        >
          <div
            class="inline-block truncate"
          >
            <span
              class="text-theme-neutral-800 font-semibold max-w-24 flex-auto truncate mt-4 mr-1 text-base"
              data-testid="address__wallet-name"
            >
              My wallet
            </span>
            <span
              class="text-theme-neutral-400 font-semibold text-base"
              data-testid="address__wallet-address"
            >
              ASuu...3kqT
            </span>
          </div>
        </div>
        <div
          class="font-bold text-theme-neutral-900"
        >
          100,000 BTC
        </div>
      </div>
    </div>
  </div>
</div>
`;
